--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "heroku-postbuild": "npm run build"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@tailwindcss/ui": "^0.1.3",
