--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.1.5",
+    "vue-scrollto": "^2.18.1",
     "vue-simplemde": "^1.0.4",
     "vue-slider-component": "^3.1.1",
     "vuejs-paginate": "^2.1.0",
